Loosen pydantic versions

--- a/atomic-examples/mcp-agent/example-client/pyproject.toml
+++ b/atomic-examples/mcp-agent/example-client/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Your Name <you@example.com>"]
 atomic-agents = { path = "../../../", develop = true }
 example-mcp-server = { path = "../example-mcp-server", develop = true }
 python = ">=3.10,<3.13"
-pydantic = ">=2.0.0"
+pydantic = ">=2.10.3,<3.0.0"
 rich = ">=13.0.0"
 openai = ">=1.0.0"
 mcp = {extras = ["cli"], version = "^1.6.0"}
