--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 instructor = ">=1.3.4,<2.0.0"
-pydantic = "2.10.3"
+pydantic = ">=2.10.3,<3.0.0"
 rich = ">=13.7.1,<14.0.0"
 gitpython = ">=3.1.43,<4.0.0"
 pyfiglet = ">=1.0.2,<2.0.0"
