fix: build singlehtml in docs workflow for llms.txt generation

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build documentation
         run: |
           cd docs
+          poetry run make singlehtml
           poetry run make html
 
       - name: Generate llms.txt
