--- a/atomic-examples/mcp-agent/example-mcp-server/pyproject.toml
+++ b/atomic-examples/mcp-agent/example-mcp-server/pyproject.toml
@@ -5,7 +5,7 @@ description = "example-mcp-server MCP server"
 authors = []
 requires-python = ">=3.12.0"
 dependencies = [
-    "mcp[cli]",
+    "mcp[cli]>=1.9.4",
     "rich>=13.0.0",
     "pydantic>=2.0.0",
     "uvicorn>=0.15.0",
