--- a/atomic-examples/mcp-agent/example-client/pyproject.toml
+++ b/atomic-examples/mcp-agent/example-client/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = ">=2.10.3,<3.0.0"
 rich = ">=13.0.0"
 openai = ">=1.0.0"
 mcp = {extras = ["cli"], version = "^1.9.4"}
+fastapi = "^0.115.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
