--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ sphinx-design = ">=0.5.0,<1.0.0"
 sphinx-autobuild = ">=2024.2.4,<2025.0.0"
 beautifulsoup4 = ">=4.12.3,<5.0.0"
 markdownify = ">=0.9.0,<1.0.0"
+autoflake = "^2.3.1"
 
 [tool.poetry.scripts]
 atomic = "atomic_assembler.main:main"
