--- a/atomic-examples/rag-chatbot/pyproject.toml
+++ b/atomic-examples/rag-chatbot/pyproject.toml
@@ -1,20 +1,21 @@
 [tool.poetry]
 name = "rag-chatbot"
 version = "0.1.0"
-description = "A RAG chatbot example using Atomic Agents and ChromaDB"
+description = "A RAG chatbot example using Atomic Agents and ChromaDB/Qdrant"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
-chromadb = "^0.4.24"
-numpy = ">=1.22.5,<2.0"
-python-dotenv = ">=1.0.1,<2.0.0"
-openai = ">=1.35.12,<2.0.0"
-pulsar-client = ">=3.6.1,<4.0.0" 
-rich = ">=13.7.0,<14.0.0"
-wget = ">=3.2,<4.0"
+chromadb = "^1.0.20"
+qdrant-client = "^1.15.1"
+numpy = "^2.3.2"
+python-dotenv = "^1.0.1"
+openai = "^1.100.2"
+pulsar-client = "^3.8.0"
+rich = "^13.7.0"
+wget = "^3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
