--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/llms-*.txt
+docs/llms.txt
+docs/examples/source/
 
 # PyBuilder
 target/
@@ -150,4 +153,5 @@ debug.log
 # AI tools
 .claude
 CLAUDE.md
+CLAUDE.local.md
 .serena
