--- a/atomic-examples/rag-chatbot/pyproject.toml
+++ b/atomic-examples/rag-chatbot/pyproject.toml
@@ -1,22 +1,29 @@
-[tool.poetry]
+[project]
 name = "rag-chatbot"
 version = "0.1.0"
 description = "A RAG chatbot example using Atomic Agents and ChromaDB/Qdrant"
-authors = ["Your Name <your.email@example.com>"]
+authors = [{name = "Your Name", email = "your.email@example.com"}]
 readme = "README.md"
+requires-python = ">=3.12,<4.0"
 
-[tool.poetry.dependencies]
-python = ">=3.12,<4.0"
-atomic-agents = {path = "../..", develop = true}
-chromadb = "^1.0.20"
-qdrant-client = "^1.15.1"
-numpy = "^2.3.2"
-python-dotenv = "^1.0.1"
-openai = "^1.100.2"
-pulsar-client = "^3.8.0"
-rich = "^13.7.0"
-wget = "^3.2"
+dependencies = [
+    "atomic-agents",
+    "chromadb>=1.0.20,<2.0.0",
+    "qdrant-client>=1.15.1,<2.0.0",
+    "numpy>=2.3.2,<3.0.0",
+    "python-dotenv>=1.0.1,<2.0.0",
+    "openai>=1.100.2,<2.0.0",
+    "pulsar-client>=3.8.0,<4.0.0",
+    "rich>=13.7.0,<14.0.0",
+    "wget>=3.2,<4.0"
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatchling.build.targets.wheel]
+packages = ["rag_chatbot"]
+
+[tool.uv.sources]
+atomic-agents = { workspace = true }
