--- a/atomic-examples/basic-multimodal/pyproject.toml
+++ b/atomic-examples/basic-multimodal/pyproject.toml
@@ -1,20 +1,27 @@
-[tool.poetry]
+[project]
 name = "basic-multimodal"
 version = "1.0.0"
 description = "Basic Multimodal Quickstart example for Atomic Agents"
-authors = ["Kenny Vaneetvelde <kenny.vaneetvelde@gmail.com>"]
+authors = [{name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com"}]
 readme = "README.md"
+requires-python = ">=3.12,<4.0"
 
-[tool.poetry.dependencies]
-python = ">=3.12,<4.0"
-atomic-agents = {path = "../..", develop = true}
-instructor = ">=1.9.0,<2.0.0"
-openai = ">=1.35.12,<2.0.0"
-groq = ">=0.11.0,<1.0.0"
-mistralai = ">=1.1.0,<2.0.0"
-anthropic = ">=0.39.0,<1.0.0"
+dependencies = [
+    "atomic-agents",
+    "instructor>=1.9.0,<2.0.0",
+    "openai>=1.35.12,<2.0.0",
+    "groq>=0.11.0,<1.0.0",
+    "mistralai>=1.1.0,<2.0.0",
+    "anthropic>=0.39.0,<1.0.0"
+]
 
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatchling.build.targets.wheel]
+packages = ["basic_multimodal"]
+
+[tool.uv.sources]
+atomic-agents = { workspace = true }
