--- a/atomic-examples/deep-research/pyproject.toml
+++ b/atomic-examples/deep-research/pyproject.toml
@@ -1,23 +1,30 @@
-[tool.poetry]
+[project]
 name = "deep-research"
 version = "0.1.0"
-description = ""
-authors = ["Kenny Vaneetvelde <kenny@brainblendai.com>"]
+description = "Deep Research example for Atomic Agents"
+authors = [{name = "Kenny Vaneetvelde", email = "kenny@brainblendai.com"}]
 readme = "README.md"
+requires-python = ">=3.12,<4.0"
 
-[tool.poetry.dependencies]
-python = ">=3.12,<4.0"
-atomic-agents = {path = "../..", develop = true}
-requests = "^2.32.3"
-beautifulsoup4 = "^4.12.3"
-markdownify = "^0.13.1"
-readability-lxml = "^0.8.1"
-lxml-html-clean = "^0.4.0"
-lxml = "^5.3.0"
-python-dotenv = ">=1.0.1,<2.0.0"
-openai = ">=1.35.12,<2.0.0"
-trafilatura = "^1.6.3"
+dependencies = [
+    "atomic-agents",
+    "requests>=2.32.3,<3.0.0",
+    "beautifulsoup4>=4.12.3,<5.0.0",
+    "markdownify>=0.13.1,<1.0.0",
+    "readability-lxml>=0.8.1,<1.0.0",
+    "lxml-html-clean>=0.4.0,<1.0.0",
+    "lxml>=5.3.0,<6.0.0",
+    "python-dotenv>=1.0.1,<2.0.0",
+    "openai>=1.35.12,<2.0.0",
+    "trafilatura>=1.6.3,<2.0.0"
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatchling.build.targets.wheel]
+packages = ["deep_research"]
+
+[tool.uv.sources]
+atomic-agents = { workspace = true }
