--- a/atomic-examples/mcp-agent/example-client/pyproject.toml
+++ b/atomic-examples/mcp-agent/example-client/pyproject.toml
@@ -1,19 +1,24 @@
-[tool.poetry]
+[project]
 name = "example-client"
 version = "0.1.0"
 description = "Example: Choosing the right MCP tool for a user query using the MCP Tool Factory."
-authors = ["Your Name <you@example.com>"]
+authors = [{name = "Your Name", email = "you@example.com"}]
+requires-python = ">=3.12,<4.0"
 
-[tool.poetry.dependencies]
-python = ">=3.12,<4.0"
-atomic-agents = { path = "../../../", develop = true }
-example-mcp-server = { path = "../example-mcp-server", develop = true }
-pydantic = ">=2.10.3,<3.0.0"
-rich = ">=13.0.0"
-openai = ">=1.0.0"
-mcp = {extras = ["cli"], version = "^1.9.4"}
-fastapi = "^0.115.14"
+dependencies = [
+    "atomic-agents",
+    "example-mcp-server",
+    "pydantic>=2.10.3,<3.0.0",
+    "rich>=13.0.0,<14.0.0",
+    "openai>=1.0.0,<2.0.0",
+    "mcp[cli]>=1.9.4,<2.0.0",
+    "fastapi>=0.115.14,<1.0.0"
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv.sources]
+atomic-agents = { workspace = true }
+example-mcp-server = { workspace = true }
