Pin instructor versions to 1.9.2 until https://github.com/567-labs/instructor/issues/1796 is fixed.

--- a/atomic-examples/web-search-agent/pyproject.toml
+++ b/atomic-examples/web-search-agent/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
 openai = ">=1.35.12,<2.0.0"
 pydantic = ">=2.9.2,<3.0.0"
-instructor = ">=1.5.2,<2.0.0"
+instructor = "==1.9.2"
 python-dotenv = ">=1.0.1,<2.0.0"
 
 
