--- a/atomic-examples/orchestration-agent/pyproject.toml
+++ b/atomic-examples/orchestration-agent/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
-instructor = "^1.6.1"
+instructor = "==1.9.2"
 pydantic = ">=2.10.3,<3.0.0"
 sympy = "^1.13.3"
 python-dotenv = ">=1.0.1,<2.0.0"
