--- a/atomic-examples/fastapi-memory/pyproject.toml
+++ b/atomic-examples/fastapi-memory/pyproject.toml
@@ -13,7 +13,8 @@ uvicorn = "^0.32.1"
 instructor = "==1.9.2"
 openai = ">=1.0.0"
 pydantic = ">=2.10.3,<3.0.0"
-python-dotenv = ">=1.0.1,<2.0.0"
+httpx = "^0.28.1"
+rich = "^13.9.4"
 
 [build-system]
 requires = ["poetry-core"]
